@@ -7,8 +7,9 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
 import com.salesmanager.core.business.exception.ServiceException;
 import com.salesmanager.core.model.catalog.category.Category;
 import com.salesmanager.core.model.catalog.category.CategoryDescription;
@@ -301,7 +302,7 @@ public class ProductTest extends com.salesmanager.test.common.AbstractSalesManag
 		//System.out.println("Number of manufacturer for all category " + manufacturers.size());
 		
 		//Update product -- get first from the list
-		Product updatableProduct = products.get(0);
+		Product updatableProduct = products.getFirst();
 
 		//Get first availability, which is the only one created
 		ProductAvailability updatableAvailability = updatableProduct.getAvailabilities().iterator().next();
@@ -332,7 +333,7 @@ public class ProductTest extends com.salesmanager.test.common.AbstractSalesManag
 		//go and get products again
 		products = productService.listByStore(store);
 
-		updatableProduct = products.get(0);
+		updatableProduct = products.getFirst();
 		
 		//test attributes
 		this.testAttributes(updatableProduct);
@@ -512,7 +513,7 @@ public class ProductTest extends com.salesmanager.test.common.AbstractSalesManag
 	     */
 	    
 	    List<ProductAttribute> attributes = productAttributeService.getProductAttributesByCategoryLineage(store, product.getCategories().iterator().next().getLineage(), en);
-	    Assert.assertTrue((long) attributes.size() > 0);
+	    Assertions.assertTrue((long) attributes.size() > 0);
 
 	}
 	
@@ -559,12 +560,12 @@ public class ProductTest extends com.salesmanager.test.common.AbstractSalesManag
         //get physical small image
         OutputContentFile contentFile = productImageService.getProductImage(product.getMerchantStore().getCode(), product.getSku(), productImage.getProductImage(), ProductImageSize.SMALL);
         
-        Assert.assertNotNull(contentFile);
+        Assertions.assertNotNull(contentFile);
 
    	 	//get physical original image
         contentFile = productImageService.getProductImage(product.getMerchantStore().getCode(), product.getSku(), productImage.getProductImage(), ProductImageSize.LARGE);
         
-        Assert.assertNotNull(contentFile);
+        Assertions.assertNotNull(contentFile);
 
 		
 	}
